<resources>
    <string name="app_name">SiriusWallet</string>
    <string name="btn_add_operation">Добавить операцию</string>
    <string name="main_font">sans-serif</string>
    <string name="wallet_text">КошелОк</string>
    <string name="welcome_text">Добро пожаловать в КошелОК</string>
    <string name="description_text">Тут вы сможете контролировать свои доходы и расходы</string>
    <string name="button_text">Войти с помощью Google</string>
    <string name="button_done">Готово</string>
    <string name="operation_sum">Введите сумму</string>
    <string name="operation_type">Выберите тип операции</string>
    <string name="operation_category">Выберите категорию</string>
    <string name="new_operation">Новая операция</string>
    <string name="enter_sum_operation">Сумма операции</string>
    <string name="income_label">Пополнение</string>
    <string name="expense_label">Траты</string>
    <string name="rub_symbol">₽</string>
    <string name="operation_date_today">Сегодня</string>
    <string name="operation_date_yesterday">Вчера</string>
    <string name="button_next">Далее</string>
    <string name="create_operation">Создать операцию</string>
    <string name="general_text">Основные</string>
    <string name="sum">Сумма</string>
    <string name="category">Категория</string>
    <string name="category_text">Зарплата</string>
    <string name="date_operation">Дата операции</string>
    <string name="date_operation_text">21 июля</string>
    <string name="type_text">Тип</string>
    <string name="sum_rubles">130 000 ₽</string>
    <string name="arrow_right">arrow right</string>
    <string name="additional_settings">Дополнительные настройки</string>
    <string name="wallet_info_no_operations">У вас пока нет записей</string>
    <string name="warning_text_input">Обязательно к заполнению!</string>
    <string name="wallet_balance_format">%1$s ₽</string>
    <string name="wallet_number">Кошелек 1</string>
    <string name="something_wrong">Что-то пошло не так</string>


</resources>