<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/type"
        android:layout_width="224dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/standard"
        android:text="@string/sum"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value"
        android:layout_width="75dp"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/roboto"
        android:textSize="@dimen/standard"
        android:textColor="@color/light_secondary"
        android:layout_marginStart="252dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/sum_rubles" />

    <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="7dp"
        android:layout_height="12dp"
        android:src="@drawable/ic_icon"
        android:layout_marginStart="337dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/arrow_right" />
</androidx.constraintlayout.widget.ConstraintLayout>