<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.transition.EditOperationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editOperationToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_operation"
        app:titleTextAppearance="@style/ToolbarTitleText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/doneButtonBlackConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/roboto"
        android:paddingVertical="14dp"
        android:text="@string/create_operation"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/generalText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:text="@string/general_text"
        android:textSize="@dimen/standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOperationToolbar" />

    <include
        android:id="@+id/sum_container"
        layout="@layout/new_operation_text_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generalText" />

    <include
        android:id="@+id/type_container"
        layout="@layout/new_operation_text_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sum_container" />

    <include
        android:id="@+id/category_container"
        layout="@layout/new_operation_text_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_container" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:text="@string/additional_settings"
        android:textSize="@dimen/standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_container" />

    <!--    TODO reuse progressbar in project -> include -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="22dp"
        android:elevation="2dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/date_container"
        layout="@layout/new_operation_text_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />


</androidx.constraintlayout.widget.ConstraintLayout>